; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_variable.c_find_simple.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/preproc/extr_variable.c_find_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.variable = type { i32, %struct.variable* }

@allvariables = common dso_local global %struct.variable* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.variable* (i8*)* @find_simple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.variable* @find_simple(i8* %0) #0 {
  %2 = alloca %struct.variable*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.variable*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load %struct.variable*, %struct.variable** @allvariables, align 8
  store %struct.variable* %5, %struct.variable** %4, align 8
  br label %6

6:                                                ; preds = %19, %1
  %7 = load %struct.variable*, %struct.variable** %4, align 8
  %8 = icmp ne %struct.variable* %7, null
  br i1 %8, label %9, label %23

9:                                                ; preds = %6
  %10 = load %struct.variable*, %struct.variable** %4, align 8
  %11 = getelementptr inbounds %struct.variable, %struct.variable* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i64 @strcmp(i32 %12, i8* %13)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load %struct.variable*, %struct.variable** %4, align 8
  store %struct.variable* %17, %struct.variable** %2, align 8
  br label %24

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.variable*, %struct.variable** %4, align 8
  %21 = getelementptr inbounds %struct.variable, %struct.variable* %20, i32 0, i32 1
  %22 = load %struct.variable*, %struct.variable** %21, align 8
  store %struct.variable* %22, %struct.variable** %4, align 8
  br label %6

23:                                               ; preds = %6
  store %struct.variable* null, %struct.variable** %2, align 8
  br label %24

24:                                               ; preds = %23, %16
  %25 = load %struct.variable*, %struct.variable** %2, align 8
  ret %struct.variable* %25
}

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
